refactor(api): remove demo air purchase endpoint
